Optimize REI display, fix item duplication bug.