@@ -24,7 +24,7 @@ public class REIWoodworkingRecipeDisplay implements Display, Comparable<REIWoodw
     private final List<EntryIngredient> inputs;
     private final List<EntryIngredient> outputs;
     private final Optional<ResourceLocation> recipeID;
-    private int sortIndex = 0; // 添加排序索引字段
+    private int sortIndex = 0;
 
     public REIWoodworkingRecipeDisplay(List<EntryIngredient> inputs, List<EntryIngredient> outputs, Optional<ResourceLocation> recipeID) {
         this.inputs = inputs;
@@ -32,13 +32,11 @@ public class REIWoodworkingRecipeDisplay implements Display, Comparable<REIWoodw
         this.recipeID = recipeID;
     }
 
-    // 添加设置排序索引的方法
     public REIWoodworkingRecipeDisplay setSortIndex(int index) {
         this.sortIndex = index;
         return this;
     }
 
-    // 实现Comparable接口的比较方法
     @Override
     public int compareTo(REIWoodworkingRecipeDisplay other) {
         return Integer.compare(this.sortIndex, other.sortIndex);
@@ -47,12 +45,10 @@ public class REIWoodworkingRecipeDisplay implements Display, Comparable<REIWoodw
     public static REIWoodworkingRecipeDisplay of(RecipeHolder<WoodworkingRecipe> recipeHolder) {
         WoodworkingRecipe recipe = recipeHolder.value();
 
-        // 处理输入
         List<EntryIngredient> inputs = Collections.singletonList(
-                EntryIngredients.ofIngredient(recipe.getIngredients().get(0))
+                EntryIngredients.ofIngredient(recipe.getIngredients().getFirst())
         );
 
-        // 处理输出
         ItemStack resultItem = recipe.getResultItem(null);
         List<EntryIngredient> outputs = Collections.singletonList(
                 resultItem.isEmpty() ? EntryIngredient.empty() : EntryIngredient.of(EntryStacks.of(resultItem))
@@ -91,20 +87,16 @@ public class REIWoodworkingRecipeDisplay implements Display, Comparable<REIWoodw
 
         @Override
         public CompoundTag save(CompoundTag tag, REIWoodworkingRecipeDisplay display) {
-            // 存储配方输入
             ListTag inputs = new ListTag();
             display.inputs.forEach(ingredient -> inputs.add(ingredient.saveIngredient()));
             tag.put("inputs", inputs);
 
-            // 存储配方输出
             ListTag outputs = new ListTag();
             display.outputs.forEach(ingredient -> outputs.add(ingredient.saveIngredient()));
             tag.put("outputs", outputs);
 
-            // 存储配方ID
             display.recipeID.ifPresent(id -> tag.putString("recipeID", id.toString()));
 
-            // 存储排序索引
             tag.putInt("sortIndex", display.sortIndex);
 
             return tag;
@@ -112,25 +104,20 @@ public class REIWoodworkingRecipeDisplay implements Display, Comparable<REIWoodw
 
         @Override
         public REIWoodworkingRecipeDisplay read(CompoundTag tag) {
-            // 读取输入
             List<EntryIngredient> inputs = new ArrayList<>();
             tag.getList("inputs", Tag.TAG_LIST).forEach(nbtElement ->
                     inputs.add(EntryIngredient.read((ListTag) nbtElement)));
 
-            // 读取输出
             List<EntryIngredient> outputs = new ArrayList<>();
             tag.getList("outputs", Tag.TAG_LIST).forEach(nbtElement ->
                     outputs.add(EntryIngredient.read((ListTag) nbtElement)));
 
-            // 读取配方ID
             Optional<ResourceLocation> recipeID = tag.contains("recipeID")
                     ? Optional.of(ResourceLocation.parse(tag.getString("recipeID")))
                     : Optional.empty();
 
-            // 读取排序索引
             int sortIndex = tag.contains("sortIndex") ? tag.getInt("sortIndex") : 0;
 
-            // 创建显示对象并设置排序索引
             return new REIWoodworkingRecipeDisplay(inputs, outputs, recipeID)
                     .setSortIndex(sortIndex);
         }
